--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,10 @@
 .footer{
   background-color: #D1C4E9;
   padding: 20px 0px 20px 0px;
-}
-.footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  /* color:#fff; */
+  /* margin-top: 30vh; */
 }
 .navbar-dark {
   background-color: #512DA8;
